--- a/Client/app/views/blog.html
+++ b/Client/app/views/blog.html
@@ -1,7 +1,7 @@
 <div class="row">
     <section class="large-9 columns">
         <article ng-repeat="post in posts">
-            <h1><a href="/post">{{ post.title }}</a></h1>
+            <h1><a href="/blog/post/{{ post._id }}">{{ post.title }}</a></h1>
             <p>Posted: <time datetime="2013-09-03">{{ post.created_at }}</time></p>
             <img src="../images/blog/pic.png"></img>
             <p>{{ post.desc }}</p>
