--- a/Client/app/views/post.html
+++ b/Client/app/views/post.html
@@ -1,9 +1,9 @@
 <div class="row">
     <section class="large-9 columns post">
-        <h1>Post title</h1>
-        <p>Posted: <time datetime="2013-09-03">Septerber 3<sup>rd</sup> 2013</time></p>
-        <img src="../images/blog/pic.png"></img>
-        <p>Cras id nibh neque, eu dignissim orci. Aenean at adipiscing urna. Suspendisse potenti. Suspendisse vitae tellus a neque commodo rutrum. Praesent ac neque vitae massa pharetra pellentesque. Pellentesque vestibulum elit at metus venenatis non faucibus massa egestas. Suspendisse nisl leo, cursus non interdum a, consequat sed sapien. Duis at est mi, sit amet placerat lectus.</p>
+        <h1>{{ post.title }}</h1>
+        <p>Posted: <time datetime="2013-09-03">{{ post.created_at }}</time></p>
+        <img src="/images/blog/pic.png"></img>
+        <p>{{ post.content }}</p>
 
         <article>
             <h1>Comments</h1>
