--- a/Client/app/views/blog.html
+++ b/Client/app/views/blog.html
@@ -1,7 +1,8 @@
 <div class="row">
     <section class="large-9 columns">
         <article data-ng-repeat="post in posts">
-            <h1><a href="/blog/post/{{ post._id }}">{{ post.title }}</a></h1>
+            <h1><a ui-sref="post({ id:post._id })">{{ post.title }}</a></h1>
+            <p>Edit post<a ui-sref="edit({ id:post._id, action:'edit' })">{{ post.title }}</a></p>
             <p>Posted: <time datetime="2013-09-03">{{ post.created_at }}</time></p>
             <img data-ng-src="{{ post.image }}" />
             {{ post.image }}
@@ -31,9 +32,11 @@
                 <li class="programming">
                     <span>Programming</span>
                 </li>
+
                 <li class="shareable">
                     <span>Web Design</span>
                 </li>
+
                 <li class="share">
                     <span>Photography</span>
                 </li>
