--- a/Client/app/styles/main.scss
+++ b/Client/app/styles/main.scss
@@ -6,6 +6,7 @@
 @import "foundation/scss/foundation/components/forms";
 
 /* Put your CSS here */
+@import "variables";
 @import "fonts";
 @import "colors";
 @import "layout";
