--- a/Client/app/styles/layout.scss
+++ b/Client/app/styles/layout.scss
@@ -14,7 +14,7 @@ body {
             letter-spacing: 0.1em;
             height: 115px;
             padding: 38px 0 0 0;
-            color: #8f6868;
+            color: $drity-red;
         }
 
         nav {
@@ -31,7 +31,7 @@ body {
                     a {
                         text-decoration: none;
                         font-size: 20px;
-                        color: #8f6868;
+                        color: $drity-red;
                     }
                 }
 
