Category map reduce add blog listing view updated.

--- a/Client/app/styles/blog.scss
+++ b/Client/app/styles/blog.scss
@@ -140,7 +140,7 @@ aside {
                      color: #8f6868;
                  }
 
-                 .programming,
+                 .development,
                  .share,
                  .tools
                  .shareable,
@@ -149,7 +149,7 @@ aside {
                      height: 32px;
                  }
 
-                 &.programming {
+                 &.development {
                     background: transparent url('../images/blog/category_ico_idle.png') no-repeat 0 0;
 
                     &:hover {
