--- a/Client/app/styles/blog.scss
+++ b/Client/app/styles/blog.scss
@@ -29,6 +29,10 @@ article {
     p {
         font-size: 14px;
         margin-top: 0;
+
+        & + img {
+          margin-bottom: 20px;
+        }
     }
 
     time {
