--- a/Client/app/styles/main.scss
+++ b/Client/app/styles/main.scss
@@ -1,6 +1,6 @@
 @import "foundation/scss/normalize";
 @import "foundation/scss/foundation";
-@import "foundation/scss/foundation/variables";
+//@import "foundation/scss/foundation/variables";
 @import "foundation/scss/foundation/components/global";
 @import "foundation/scss/foundation/components/buttons";
 @import "foundation/scss/foundation/components/forms";
