--- a/Client/app/styles/blog.scss
+++ b/Client/app/styles/blog.scss
@@ -1,3 +1,11 @@
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #e6e6e6;
+}
+
 article h1,
 section h1 {
     font-family: "openSansLight";
@@ -13,10 +21,61 @@ section {
 }
 
 article {
-    margin-bottom: 20px;
-    border-bottom: 1px dotted #4d4d4d;
+    margin: rem-calc(0 0 20 0);
 
-    h1 {
+    header {
+        position: relative;
+
+        div {
+            overflow: hidden;
+            height: 126px;
+
+            img {
+                height: rem-calc(126);
+                @include single-transition;
+
+                &:hover {
+                    -webkit-transform: scale(1.1);
+                    -moz-transform: scale(1.1);
+                    transform: scale(1.1);
+                }
+            }
+
+            & + span {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                width: 30px;
+                height: 30px;
+                border-radius: 4px;
+                background-color: #e6e6e6;
+
+                & + span {
+                    position: absolute;
+                    bottom: 0;
+                    left: 25px;
+                }
+            }
+        }
+    }
+
+    footer {
+        height: rem-calc(78); /* 78px */
+        background: #e6e6e6;
+        padding: rem-calc(4 0 0 10);
+
+        h4 {
+            margin-top: 0;
+            font-size: rem-calc(17);
+        }
+
+        time {
+            font-size: rem-calc(14);
+        }
+    }
+}
+
+    /*h1 {
         font-size: 22px;
         margin-bottom: 0;
 
@@ -29,10 +88,6 @@ article {
     p {
         font-size: 14px;
         margin-top: 0;
-
-        & + img {
-          margin-bottom: 20px;
-        }
     }
 
     time {
@@ -40,7 +95,22 @@ article {
         color: #8f6868;
     }
 
-    ul {
+    & > div:first-child {
+      overflow: hidden;
+      height: 250px;
+    }
+
+    & > div:last-child {
+      background-color: #CFCFCF;
+      padding: 10px;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+    }*/
+
+    /*ul {
         overflow: hidden;
 
         li {
@@ -200,4 +270,4 @@ aside {
              }
          }
      }
-}
+}*/
