--- a/Client/app/styles/layout.scss
+++ b/Client/app/styles/layout.scss
@@ -6,14 +6,17 @@ body {
 #header {
     background: transparent url('../images/header_bg.png') repeat-x;
     height: 99px;
-    margin: 0 0 32px 0;
+    margin: rem-calc(0 0 32 0);
 
     header {
         h1 {
-            font: normal 45px/90% "titrebook";
+            font-family: "titrebook";
+            font-weight: normal;
+            font-size: rem-calc(45);
+            line-height: rem-calc(37);
             letter-spacing: 0.1em;
             height: 115px;
-            padding: 38px 0 0 0;
+            padding: rem-calc(38 0 0 0);
             color: $drity-red;
         }
 
@@ -24,19 +27,19 @@ body {
                 margin-top: 60px;
                 li {
                     float: left;
-                    margin: 0 20px 0 0;
+                    margin: rem-calc(0 20 0 0);
                     list-style: none;
                     font-family: titrebook;
 
                     a {
                         text-decoration: none;
-                        font-size: 20px;
+                        font-size: rem-calc(20);
                         color: $drity-red;
                     }
                 }
 
                 .portfolio {
-                    margin-left: 265px;
+                    margin-left: rem-calc(265);
                 }
             }
         }
@@ -44,7 +47,7 @@ body {
 }
 
 #content {
-    padding: 33px 0 0 0;
+    padding: rem-calc(33 0 0 0);
 }
 
 #footer {
@@ -53,5 +56,5 @@ body {
     background: transparent url('../images/footer_bg.png') repeat-x;
     height: 199px;
     width: 100%;
-    padding: 20px 0 0 0px;
+    padding: rem-calc(20 0 0 0);
 }
