Sorted isotope + a few updates

--- a/Client/app/styles/layout.scss
+++ b/Client/app/styles/layout.scss
@@ -53,7 +53,7 @@ body {
 #footer {
     position: relative;
     bottom: 0px;
-    background: transparent url('../images/footer_bg.png') repeat-x;
+    /*background: transparent url('../images/footer_bg.png') repeat-x;*/
     height: 199px;
     width: 100%;
     padding: rem-calc(20 0 0 0);
